// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="css-1v2j3qb"
    color="info"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="css-nfd0mt"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a hint color 1`] = `
<div>
  <div
    class="css-13pcg61"
    color="hint"
  />
</div>
`;

exports[`Spinner should render a info color 1`] = `
<div>
  <div
    class="css-1v2j3qb"
    color="info"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="css-iepbhh"
    color="info"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="css-xvdci8"
    color="info"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="css-130bjqv"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="css-1w7h9pk"
    color="warning"
  />
</div>
`;
